--- a/system/app/Widgets/Quote/views/quote-type-info.phtml
+++ b/system/app/Widgets/Quote/views/quote-type-info.phtml
@@ -17,7 +17,7 @@
                 <?php else:?>
                     <?php echo (int)$this->partialPercentage;?>
                 <?php endif;?>
-                % <?php echo $this->translate('required!');?> <?php echo $this->translate('Please make partial payment');?>:<span id="partial-payment-percentage-payment-amount"><?php echo $this->partialToPayAmount;?></span>:
+                % <?php echo $this->translate('required!');?> <?php echo $this->translate('Please make partial payment');?>:<span id="partial-payment-percentage-payment-amount"><?php echo $this->partialToPayAmount;?></span>
             </span>
         <?php else:?>
             <span id="quote-type-info-message">
