--- a/system/app/Widgets/Quote/views/quote-type-info.phtml
+++ b/system/app/Widgets/Quote/views/quote-type-info.phtml
@@ -11,17 +11,17 @@
         </span>
     <?php elseif ($this->paymentType === Quote_Models_Model_Quote::PAYMENT_TYPE_PARTIAL_PAYMENT): ?>
         <?php if ($this->isPartialPaid === false):?>
-            <span id="quote-type-info-message"><?php echo $this->translate('You don\'t have to pay full price now. Only');?>
+            <span id="quote-type-info-message"><?php echo $this->translate('To place this order, and get things started, please make a non-refundable down payment of ');?>
                 <?php if($this->isAdmin === true):?>
                     <input id="partial-payment-percentage" name="partial-payment-percentage" value="<?php echo (int)$this->partialPercentage;?>" />
                 <?php else:?>
                     <?php echo (int)$this->partialPercentage;?>
                 <?php endif;?>
-                % <?php echo $this->translate('required!');?> <?php echo $this->translate('Please make partial payment');?>:<span id="partial-payment-percentage-payment-amount"><?php echo $this->partialToPayAmount;?></span>
+                % <?php echo $this->translate('or');?> <span id="partial-payment-percentage-payment-amount"><?php echo $this->partialToPayAmount;?></span> <?php echo $this->translate('using the credit card form below');?>:
             </span>
         <?php else:?>
             <span id="quote-type-info-message">
-                <?php echo $this->translate('You have to pay');?> <?php echo $this->currency($this->leftAmountToPaid);?>
+                <?php echo $this->translate('We received your');?> <?php echo (int) $this->partialPercentage;?>%     <?php echo $this->translate('deposit of');?> <?php echo $this->currency($this->partialAmountPaid);?> on <?php echo $this->partialPaidDate;?> on this quote, and we thank you for it. <?php echo $this->translate('Please pay the reminder amount of');?> <?php echo $this->currency($this->leftAmountToPaid);?> <?php echo $this->translate('When instructed to do so using the credit card form below');?> :
             </span>
         <?php endif;?>
     <?php elseif ($this->paymentType === Quote_Models_Model_Quote::PAYMENT_TYPE_ONLY_SIGNATURE): ?>
