--- a/system/app/Widgets/Quote/views/signature.phtml
+++ b/system/app/Widgets/Quote/views/signature.phtml
@@ -19,7 +19,7 @@
                 </div>
                 <input class="hidden" type="text" name="quote-signature-form-img" id="quote-signature-form-img">
                 <input class="hidden" type="text" name="signature-quote-id" id="signature-quote-id" value="<?php echo $this->quoteId;?>">
-                <input name="submit-quote-signature-form" type="submit" value="<?php echo $this->translate('Sign a Quote');?>">
+                <input name="submit-quote-signature-form" type="submit" value="<?php echo $this->translate('Validate signature and accept proposal');?>">
             </form>
         <?php endif;?>
     <?php else :?>
