--- a/system/app/Widgets/Quote/views/download-preview-button.phtml
+++ b/system/app/Widgets/Quote/views/download-preview-button.phtml
@@ -1,2 +1,2 @@
-<a class="btn" id="download-quote-pdf-preview" href="<?php echo $this->websiteUrl.'plugin/quote/run/downloadquotepdf/quoteId/'.$this->quoteId;?>"><?php echo $this->translate('Download PDF');?></a>
+<a class="btn" id="download-quote-pdf-preview" href="<?php echo $this->websiteUrl.'plugin/quote/run/downloadquotepdf/quoteId/'.$this->quoteId;?>"><?php echo $this->translate('Download Proposal PDF');?></a>
 
