--- a/system/app/Widgets/Quote/views/grid.quote.phtml
+++ b/system/app/Widgets/Quote/views/grid.quote.phtml
@@ -42,6 +42,17 @@
     <div id="quote-grid">
         <div id="quote-grid-top" class="quote-grid-block mt20px mb20px clearfix">
             <?php echo $this->formText('search', '', array('id' => 'quote-grid-search','class' => 'grid_6 alpha', 'placeholder' => $this->translate('search quote by title, by creator, by client email & name'))); ?>
+            <?php $quoteTemplates = array_merge(
+                array(0 => 'Select quote template'),
+                Tools_System_Tools::getTemplatesHash(Quote_Models_Model_Quote::TEMPLATE_TYPE_QUOTE)
+            );?>
+            <label class="grid_2 prefix_1 mt10px"><?php echo $this->translate('Create quote from template');?>:</label>
+            <select name="quoteTemplates" id="quote-templates-list" class="grid_2">
+                <?php foreach ($quoteTemplates as $key => $quoteTemplate):?>
+                    <option value="<?php echo $key;?>"><?php echo $quoteTemplate;?></option>
+                <?php endforeach;?>
+            </select>
+
             <a class="quote-grid-add btn green fl-right ticon-plus" href="javascript:;" title="<?php echo $this->translate('Add new quote');?>"><?php echo $this->translate('Add new quote');?></a>
         </div>
         <table id="quote-grid-quotes" class="widget table-hover">
