--- a/system/app/Widgets/Quote/views/quote-type-info.phtml
+++ b/system/app/Widgets/Quote/views/quote-type-info.phtml
@@ -38,6 +38,6 @@
             </span>
         <?php endif;?>
     <?php elseif ($this->paymentType === Quote_Models_Model_Quote::PAYMENT_TYPE_ONLY_SIGNATURE): ?>
-        <span id="quote-type-info-message"></span>
+        <span id="quote-type-info-message" class="hidden"></span>
     <?php endif; ?>
 </div>
