--- a/system/app/Widgets/Quote/views/signature.phtml
+++ b/system/app/Widgets/Quote/views/signature.phtml
@@ -9,7 +9,7 @@
                     <p><?php echo $this->translate('Client signature will be here');?>:</p>
                 </div>
         <?php else:?>
-            <span><?php echo $this->translate('Signature');?>:</span>
+            <span><?php echo $this->translate('Sign here using cursor or finger on your smartphone');?>:</span>
             <form id="quote-signature-form">
                 <div id="quote-signature-form-refresh" name="quote-signature-form-refresh">
                     <img id="quote-signature-form-clear" src="<?php echo $this->websiteUrl.'plugins/quote/web/images/refresh.png';?>" alt="<?php echo $this->translate('Clear Signature')?>">
@@ -19,7 +19,7 @@
                 </div>
                 <input class="hidden" type="text" name="quote-signature-form-img" id="quote-signature-form-img">
                 <input class="hidden" type="text" name="signature-quote-id" id="signature-quote-id" value="<?php echo $this->quoteId;?>">
-                <input name="submit-quote-signature-form" type="submit" value="<?php echo $this->translate('Validate signature and accept proposal');?>">
+                <input name="submit-quote-signature-form" type="submit" value="<?php echo $this->translate('Click here to validate signature and accept proposal');?>">
             </form>
         <?php endif;?>
     <?php else :?>
