--- a/system/app/Widgets/Quote/views/grid.quote.phtml
+++ b/system/app/Widgets/Quote/views/grid.quote.phtml
@@ -47,21 +47,23 @@
                 Tools_System_Tools::getTemplatesHash(Quote_Models_Model_Quote::TEMPLATE_TYPE_QUOTE)
             );?>
 
-            <div class="btn-group grid_3 t-grid_2 t-mb10px">
-                <button class="quote-create-option-button btn checked-btn"
-                        name="quote-create-option-button-create" data-checked="true"
-                        data-type="create_new_quote"><?php echo $this->translate('Create a new quote'); ?></button>
-                <button class="quote-create-option-button btn"
-                        name="quote-create-option-button-clone" data-checked="false"
-                        data-type="create_quote_duplicate"><?php echo $this->translate('Create quote from a template'); ?></button>
+            <div class="grid_8 flex-row-quote-buttons">
+                <div class="btn-group t-mb10px">
+                    <button class="quote-create-option-button btn checked-btn"
+                            name="quote-create-option-button-create" data-checked="true"
+                            data-type="create_new_quote"><?php echo $this->translate('Create a new quote'); ?></button>
+                    <button class="quote-create-option-button btn"
+                            name="quote-create-option-button-clone" data-checked="false"
+                            data-type="create_quote_duplicate"><?php echo $this->translate('Create quote from a template'); ?></button>
+                </div>
+
+                <input class="hidden" id="search-quote-duplicate" name="search-quote-duplicate" placeholder="<?php echo $this->translate('Search by quote title');?>" />
+                <input type="text" id="quote-title-original" class="search-quote-title-original" placeholder="<?php echo $this->translate('Quote title');?>" />
+                <input class="hidden" id="duplicate-quote-id" name="duplicate-quote-id">
+                <input id="quote-chosen-type" class="quote-chosen-type" type="hidden" name="quote-chosen-type" value="">
+
+                <a class="quote-grid-add btn green ticon-plus" href="javascript:;" title="<?php echo $this->translate('Add new quote');?>"><?php echo $this->translate('Add new quote');?></a>
             </div>
-
-            <input class="grid_2 hidden" id="search-quote-duplicate" name="search-quote-duplicate" placeholder="<?php echo $this->translate('Search by quote title');?>" />
-            <input type="text" id="quote-title-original" class="grid_2 t-grid_5 search-quote-title-original" placeholder="<?php echo $this->translate('Quote title');?>" />
-            <input class="hidden" id="duplicate-quote-id" name="duplicate-quote-id">
-            <input id="quote-chosen-type" class="quote-chosen-type" type="hidden" name="quote-chosen-type" value="">
-
-            <a class="quote-grid-add btn green fl-right ticon-plus" href="javascript:;" title="<?php echo $this->translate('Add new quote');?>"><?php echo $this->translate('Add new quote');?></a>
         </div>
         <table id="quote-grid-quotes" class="widget table-hover">
             <thead>
