--- a/system/app/Widgets/Quote/views/total.quote.phtml
+++ b/system/app/Widgets/Quote/views/total.quote.phtml
@@ -3,5 +3,8 @@
 <?php else :?>
     <?php $total = $this->currency($this->total);?>
 <?php endif;?>
+<?php if(!empty($this->clean)):?>
+    <?php $total = number_format($this->total, 2);?>
+<?php endif;?>
 
 <span class="<?php echo $this->totalType; ?>-total"><?php echo $total; ?></span>
