--- a/system/app/Widgets/Quote/views/discount.quote.phtml
+++ b/system/app/Widgets/Quote/views/discount.quote.phtml
@@ -10,20 +10,32 @@
     <?php if (!empty($this->usNumericFormat)) : ?>
         <span id="quote-discount-with-tax"><?php echo number_format($this->discount + $this->discountTax, 2) . '&nbsp;' . $this->currencySymbol;?></span>
     <?php else:?>
-        <span id="quote-discount-with-tax"><?php echo $this->currency($this->discount + $this->discountTax);?></span>
+        <?php if(!empty($this->clean)):?>
+            <span id="quote-discount-with-tax"><?php echo number_format($this->discount + $this->discountTax, 2);?></span>
+        <?php else:?>
+            <span id="quote-discount-with-tax"><?php echo $this->currency($this->discount + $this->discountTax);?></span>
+        <?php endif;?>
     <?php endif;?>
 <?php else: ?>
     <?php if(($this->shoppingConfig['showPriceIncTax'])):?>
         <?php if (!empty($this->usNumericFormat)) : ?>
             <span class="quote-discount"><?php echo number_format($this->discount+$this->discountTax, 2) . '&nbsp;' . $this->currencySymbol; ?></span>
         <?php else :?>
-            <span class="quote-discount"><?php echo $this->currency($this->discount+$this->discountTax); ?></span>
-        <?php endif;?>
+            <?php if(!empty($this->clean)):?>
+                <span class="quote-discount"><?php echo number_format($this->discount+$this->discountTax, 2); ?></span>
+            <?php else:?>
+                <span class="quote-discount"><?php echo $this->currency($this->discount+$this->discountTax); ?></span>
+            <?php endif;?>
+         <?php endif;?>
     <?php else:?>
         <?php if (!empty($this->usNumericFormat)) : ?>
             <span class="quote-discount"><?php echo number_format($this->discount, 2) . '&nbsp;' . $this->currencySymbol; ?></span>
         <?php else:?>
-            <span class="quote-discount"><?php echo $this->currency($this->discount); ?></span>
+            <?php if(!empty($this->clean)):?>
+                <span class="quote-discount"><?php echo number_format($this->discount, 2); ?></span>
+            <?php else:?>
+                <span class="quote-discount"><?php echo $this->currency($this->discount); ?></span>
+            <?php endif;?>
         <?php endif;?>
     <?php endif;?>
 
