Added link option

--- a/system/app/Widgets/Quote/views/item/photo.quote.item.phtml
+++ b/system/app/Widgets/Quote/views/item/photo.quote.item.phtml
@@ -1,1 +1,7 @@
-<img src="<?php echo $this->imageUrl;?>" alt="<?php echo $this->name; ?>">
+<?php if($this->linkFlag) :?>
+    <a href="<?php echo $this->productUrl; ?>" target="_blank">
+        <img src="<?php echo $this->imageUrl; ?>" alt="<?php echo $this->name; ?>">
+    </a>
+<?php else:?>
+    <img src="<?php echo $this->imageUrl; ?>" alt="<?php echo $this->name; ?>">
+<?php endif;?>
