Allow six digits after the dot for partial percentage

--- a/system/app/Widgets/Quote/views/quote-type-info.phtml
+++ b/system/app/Widgets/Quote/views/quote-type-info.phtml
@@ -16,7 +16,7 @@
             <?php if (empty($this->isSignatureRequired)): ?>
                 <span id="quote-type-info-message"><?php echo $this->translate('To place this order, and get things started, please make a non-refundable down payment of ');?>
                     <?php if($this->isAdmin === true):?>
-                        <input id="partial-payment-percentage" name="partial-payment-percentage" value="<?php echo (int)$this->partialPercentage;?>" />
+                        <input id="partial-payment-percentage" name="partial-payment-percentage" value="<?php echo $this->partialPercentage;?>" />
                     <?php else:?>
                         <?php echo (int)$this->partialPercentage;?>
                     <?php endif;?>
@@ -25,7 +25,7 @@
             <?php else:?>
                 <span id="quote-type-info-message"><?php echo $this->translate('Please sign and validate your signature first, then to get things started, please make a non-refundable down payment of ');?>
                 <?php if($this->isAdmin === true):?>
-                    <input id="partial-payment-percentage" name="partial-payment-percentage" value="<?php echo (int)$this->partialPercentage;?>" />
+                    <input id="partial-payment-percentage" name="partial-payment-percentage" value="<?php echo $this->partialPercentage;?>" />
                 <?php else:?>
                     <?php echo (int)$this->partialPercentage;?>
                 <?php endif;?>
