--- a/system/app/Widgets/Quote/views/quote-type-info.phtml
+++ b/system/app/Widgets/Quote/views/quote-type-info.phtml
@@ -20,7 +20,7 @@
                     <?php else:?>
                         <?php echo round($this->partialPercentage, 1);?>
                     <?php endif;?>
-                    % <?php echo $this->translate('or');?> <span id="partial-payment-percentage-payment-amount"><?php echo $this->partialToPayAmount;?></span> <?php echo $this->translate('using the credit card form below');?>:
+                    % <?php echo $this->translate('which is');?> <span id="partial-payment-percentage-payment-amount"><?php echo $this->partialToPayAmount;?></span> <?php echo $this->translate('using the credit card form below');?>:
                 </span>
             <?php else:?>
                 <span id="quote-type-info-message"><?php echo $this->translate('Please sign and validate your signature first, then to get things started, please make a non-refundable down payment of ');?>
@@ -29,7 +29,7 @@
                 <?php else:?>
                     <?php echo round($this->partialPercentage, 1);?>
                 <?php endif;?>
-                % <?php echo $this->translate('or');?> <span id="partial-payment-percentage-payment-amount"><?php echo $this->partialToPayAmount;?></span> <?php echo $this->translate('using the credit card form below');?>:
+                % <?php echo $this->translate('which is');?> <span id="partial-payment-percentage-payment-amount"><?php echo $this->partialToPayAmount;?></span> <?php echo $this->translate('using the credit card form below');?>:
             </span>
             <?php endif;?>
         <?php else:?>
